--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ if( UNIX AND NOT APPLE )
     SET(ICON_DIR ${DATADIR}/icons/hicolor)
     
     FOREACH(size 128x128 16x16 256x256 32x32 48x48 64x64 72x72)
-	install(DIRECTORY ${size} DESTINATION ${ICON_DIR}/${size}/apps FILES_MATCHING PATTERN "*.png")
+	file(GLOB files  "${size}/*.png")
+        install(FILES ${files} DESTINATION ${ICON_DIR}/${size}/apps)
     ENDFOREACH(size)
 
 endif()
